First version of aside.small

--- a/examples/test/app/sections/aside-profiles.html
+++ b/examples/test/app/sections/aside-profiles.html
@@ -1,36 +1,82 @@
 <aside id="profiles" class="scroll onright">
     <div>
-        <header data-title="Opciones">
-            <nav class="onright">
+        <header data-title="Favorites">
+            <nav class="plain onright">
                 <a href="#" data-icon="refresh"></a>
             </nav>
         </header>
 
-        <div class="list">
-            <li data-image="assets/images/avatars/soyjavi.jpg">
-                <a href="#nav-1" data-target="article">
-                    <strong>Javi Jimenez Villar</strong>
-                    <small>Author of @lungojs</small>
-                </a>
-            </li>
-            <li class="red" data-icon="home">
-                    <div class="bubble black onright">23.23</div>
-                    <strong>Lorem Ipsum</strong>
-                    <small>...is a traditional text</small>
+        <div class="list scroll" style="height: 128px;">
+            <ul>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/1.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
                 </li>
-            <li>
-                <div class="bubble red onright">128</div>
-                <strong>Javi Jimenez Villar</strong>
-            </li>
-            <li>
-                <strong>Javi Jimenez Villar</strong>
-            </li>
-            <li>
-                <strong>Javi Jimenez Villar</strong>
-            </li>
+                <li class="thumb">
+                    <a href="#nav-2" data-target="article" data-image="assets/images/avatars/2.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/3.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/4.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/5.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/6.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/7.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/8.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/9.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/10.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+                <li class="thumb">
+                    <a href="#nav-1" data-target="article" data-image="assets/images/avatars/11.jpg">
+                        <strong>Name of friend</strong>
+                        <small>Extra info: mail / phone</small>
+                    </a>
+                </li>
+            </ul>
         </div>
-        <!--
         <footer>prueba</footer>
-    -->
+
     </div>
 </aside>
