--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,11 +1,8 @@
-<aside id="kitchen-sink-scroll" class=" small">
-    <ul>
+<aside id="kitchen-sink-scroll" class="small scroll onleft">
+    <nav>
         <a href="#nav-1" data-target="article" class="current" data-icon="clock"></a>
-        <a href="#nav-2" data-target="article" data-icon="calendar"></a>
-        <a href="#test-2" data-target="section" data-icon="plus" data-count="14"></a>
-        <a href="#icons" data-target="article" data-icon="picture" data-count="94"></a>
-        <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6"></a>
-        <a href="#forms" data-target="section" data-icon="edit" data-count="7"></a>
-        <a href="#lists" data-target="section" data-icon="items" data-count="15"></a>
-    </ul>
+       <a href="#nav-2" data-target="article" data-icon="check"  data-count="14"></a>
+       <a href="#test-2" data-target="section" data-icon="wifi"></a>
+
+    </nav>
 </aside>
