Enhaced form elements

--- a/examples/test/app/sections/aside-profiles.html
+++ b/examples/test/app/sections/aside-profiles.html
@@ -1,4 +1,4 @@
-<aside id="profiles" class="scroll onright">
+<aside id="profiles" class=" onright">
     <div>
         <header data-title="Favorites">
             <nav class="plain onright">
@@ -6,8 +6,8 @@
             </nav>
         </header>
 
-        <div class="list scroll" style="height: 128px;">
-            <ul>
+        <article class="list scroll current" >
+            <ul >
                 <li class="thumb">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/1.jpg">
                         <strong>Name of friend</strong>
@@ -16,6 +16,7 @@
                 </li>
                 <li class="thumb">
                     <a href="#nav-2" data-target="article" data-image="assets/images/avatars/2.jpg">
+                        <span class="onright bubble">123</span>
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
@@ -75,8 +76,11 @@
                     </a>
                 </li>
             </ul>
-        </div>
-        <footer>prueba</footer>
+        </article>
+<!--
+        <footer >
+
+        </footer> -->
 
     </div>
 </aside>
