New repository of icons: x64

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -44,7 +44,7 @@
     <section id="test-1" class="pop">
         <header class="extended">
             <nav class="onleft">
-                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="home"></a>
                 <a href="#kitchen-sink-scroll" data-article="nav-2" data-target="aside" data-icon="heart" data-count="8"></a>
             </nav>
             <div class="onleft">
@@ -58,17 +58,17 @@
 
 
         <nav class="groupbar">
-            <a href="#nav-1" data-target="article" class="current"  data-icon="clock">&nbsp;Lists</a>
+            <a href="#nav-1" data-target="article" class="current"  data-icon="html5">&nbsp;Lists</a>
             <a href="#nav-2" data-target="article" data-icon="calendar">&nbsp;Form</a>
         </nav>
 
 
         <footer class="toolbar with-labels">
             <nav>
-                <a href="#nav-1" data-target="article" data-title="d" data-icon="phone" class="current" data-label="boxes" data-count="1"></a>
-                <a href="#nav-2" data-target="article" data-title="b" data-icon="calendar" data-count="12" data-label="Form"></a>
-                <a href="#nav-3" data-target="article" data-title="c"  data-icon="mail" data-label="Emails" data-count="123"></a>
-                <a href="#nav-4" data-target="article" data-title="lists"  data-icon="clock" data-label="lists"></a>
+                <a href="#nav-1" data-target="article" data-title="d" data-icon="settings" class="current" data-label="boxes" data-count="1"></a>
+                <a href="#nav-2" data-target="article" data-title="b" data-icon="refresh" data-count="12" data-label="Form"></a>
+                <a href="#nav-3" data-target="article" data-title="c"  data-icon="share" data-label="Emails" data-count="123"></a>
+                <a href="#nav-4" data-target="article" data-title="lists"  data-icon="inbox-full" data-label="lists"></a>
             </nav>
         </footer>
 
@@ -213,9 +213,9 @@
                 </li>
                 <li class="red">
                     <a href="#"  data-icon="home">
-                        <div class="bubble red onright"><span class="icon pushpin"></span>125m</div>
+                        <div class="bubble red onright"><span class="icon map"></span>125m</div>
                         <strong>List: .red</strong>
-                        <small data-icon="home">a: data-icon & .bubble</small>
+                        <small data-icon="clock">a: data-icon & .bubble</small>
                     </a>
                 </li>
 
@@ -238,11 +238,6 @@
             </ul>
 
         </article>
-
-
-
-
-
 
         <article id="nav-3" class="list indented">
             <div>
