Changes on scaffold stylesheet

--- a/examples/test/app/sections/aside-profiles.html
+++ b/examples/test/app/sections/aside-profiles.html
@@ -8,68 +8,69 @@
 
         <article class="list scroll current" >
             <ul >
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/1.jpg">
+                        <div class="bubble onright">prueba</div>
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-2" data-target="article" data-image="assets/images/avatars/2.jpg">
                         <span class="onright bubble">123</span>
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/3.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/4.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/5.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/6.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/7.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/8.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/9.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/10.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
                     </a>
                 </li>
-                <li class="thumb">
+                <li class="">
                     <a href="#nav-1" data-target="article" data-image="assets/images/avatars/11.jpg">
                         <strong>Name of friend</strong>
                         <small>Extra info: mail / phone</small>
