--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -52,7 +52,7 @@
                 <span class="subtitle">@soyjavi</span>
             </div>
             <nav class="onright">
-                <a href="#profiles" data-target="aside" class="autohide" data-icon="group"></a>
+                <a href="#profiles" data-target="aside" data-icon="users"></a>
             </nav>
         </header>
 
@@ -176,15 +176,19 @@
                 </li>
             </ul>
             <ul>
-                <li class="tip theme">Examples of tips</li>
-                <li class="tip" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
-                <li class="tip dark" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="anchor " data-icon="small user">Examples of anchors</li>
+                <li class="padding">
+                    <strong>Lorem Ipsum</strong>
+                    <small>is simply dummy text of the printing and typesetting industry</small>
+                </li>
+                <li class="anchor" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
+                <li class="anchor contrast" data-icon="home small">Lorem Ipsum is simply dummy text...</li>
 
-                <li class="tip" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
-                <li class="tip dark" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
+                <li class="anchor" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
+                <li class="anchor contrast" data-icon="home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's...</li>
 
 
-                <li class="tip dark" data-icon="question small">It's a special form element you must set the label with class "select"</li>
+                <li class="anchor contrast" data-icon="question small">It's a special form element you must set the label with class "select"</li>
             </ul>
         </article>
 
