--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,7 +1,7 @@
-<aside id="kitchen-sink-scroll" class="small scroll onleft">
+<aside id="kitchen-sink-scroll" class="small -scroll onleft">
     <nav>
         <a href="#nav-1" data-target="article" class="current" data-icon="clock"></a>
-        <a href="#nav-2" data-target="article" data-icon="check" data-count="14"></a>
-        <a href="#test-2" data-target="section" data-icon="wifi"></a>
+        <a href="#nav-2" data-target="article" data-icon="user" data-count="14"></a>
+        <a href="#test-2" data-target="section" data-icon="pushpin"></a>
     </nav>
 </aside>
