BUG in "load/unload" trigger

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body class="app">
-    <section id="test-1" class="pop">
+    <section id="sec-1" class="pop">
         <header class="extended">
             <nav class="onleft">
                 <a href="#kitchen-sink-scroll" data-target="aside" data-icon="home"></a>
@@ -247,15 +247,15 @@
 
         <article id="nav-3" class="list indented">
             <div>
-                <a href="#test-2" data-target="section" class="button big" data-icon="check">Test 2</a>
-                <a href="#test-2"  class="button big red " data-icon="check">Test 2</a>
-                <a href="#test-2" class="button big green" data-icon="check">Test 2</a>
+                <a href="#sec-2" data-target="section" class="button big" data-icon="check">Test 2</a>
+                <a href="#sec-2"  class="button big red " data-icon="check">Test 2</a>
+                <a href="#sec-2" class="button big green" data-icon="check">Test 2</a>
             </div>
         </article>
     </section>
 
 
-    <section id="test-2" class="pop">
+    <section id="sec-2" class="pop">
         <header data-title="Auto title centered">
             <nav class="onleft">
                 <a href="#back" data-target="section" class="cancel" data-icon="close" data-label="CANCEL"></a>
