Changes on .loading attribute

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -51,17 +51,25 @@
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
                 <span class="subtitle">@soyjavi</span>
             </div>
-            <nav class="onright">
-                <a href="#profiles" data-target="aside" data-icon="users"></a>
+            <nav class="onright ">
+                <!-- <a href="#profiles" data-target="aside" data-label="User"></a>
+
+                <a href="#profiles" data-target="aside" data-icon="users" data-label="User"></a>
+                 -->
+                 <a href="#" data-icon="cloud" data-loading="white disable"></a>
+                <a href="#profiles" data-target="aside" data-icon="user"></a>
+            </nav>
+
+            <nav class="onright plain ">
+                <a href="#" data-loading="white disable"></a>
+                <a href="#" data-loading="white "></a>
             </nav>
         </header>
-
 
         <nav class="groupbar">
             <a href="#nav-1" data-target="article" class="current"  data-icon="html5">&nbsp;Lists</a>
             <a href="#nav-2" data-target="article" data-icon="calendar">&nbsp;Form</a>
         </nav>
-
 
         <footer class="toolbar with-labels">
             <nav>
