Testing new View.Element method "loading" (1/2)

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -56,7 +56,7 @@
 
                 <a href="#profiles" data-target="aside" data-icon="users" data-label="User"></a>
                  -->
-                 <a href="#" data-icon="cloud" data-loading="white disable"></a>
+                 <a href="#" data-icon="cloud" id="btn-toggle-loading"></a>
                 <a href="#profiles" data-target="aside" data-icon="user"></a>
             </nav>
 
