New namespace Lungo.Events

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -295,6 +295,7 @@
     <script src="../../src/Lungo.Service.js"></script>
     <script src="../../src/Lungo.Constants.js"></script>
     <script src="../../src/Lungo.Element.js"></script>
+    <script src="../../src/Lungo.Events.js"></script>
     <script src="../../src/router/Lungo.Router.js"></script>
     <script src="../../src/router/Lungo.Router.History.js" ></script>
     <script src="../../src/view/Lungo.View.Resize.js"></script>
@@ -320,9 +321,9 @@
 
     <!-- LungoJS - Sandbox App -->
     <script src="app/app.js"></script>
-    <script src="app/events.js"></script>
     <script src="app/view.js"></script>
     <script src="app/data.js"></script>
     <script src="app/services.js"></script>
+    <script src="app/events.js"></script>
 </body>
 </html>
