--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -41,6 +41,22 @@
 </head>
 
 <body class="app">
+    <section id="login">
+        <article class="indented splash current">
+        <h1>New user</h1>
+        <form>
+            <label>Mail</label>
+            <input type="text" placeholder="Your email" id="txt-signup-mail" value="">
+            <label>Mail</label>
+            <input type="text" placeholder="Your username" id="txt-signup-name" value="">
+            <label>Mail</label>
+            <input type="password" placeholder="Your password" id="txt-signup-password" value="">
+            <a href="#" class="button blue big" id="btn-signup-call" data-icon="checkmark">Signup</a>
+            <a href="#back" data-target="section" class="button red big" data-icon="close">Return to login</a>
+            <a href="#back" data-target="section" class="button green " data-icon="user">Return to login</a>
+        </form>
+    </article>
+    </section>
     <section id="sec-1" class="pop">
         <header class="extended">
             <nav class="onleft">
@@ -77,7 +93,7 @@
                     <span class="bubble count" data-loading="white"></span>
                 </a>
                 <a href="#nav-1" data-target="article" data-title="d" data-icon="settings" data-label="boxes" data-count="1"></a>
-                <a href="#nav-2" data-target="article" data-title="b" data-icon="refresh" data-count="12" data-label="Form"></a>
+                <a href="#nav-2" data-target="article" data-title="b" data-icon="close" data-count="12" data-label="Form"></a>
                 <a href="#nav-3" data-target="article" data-title="c"  data-icon="share" data-label="Emails" data-count="123"></a>
                 <a href="#nav-4" data-target="article" data-title="lists" data-label="lists" data-loading="white"></a>
             </nav>
